# dnn-based-collision-risk-assessment

./: CMakeLists.txt  README.md  build.sh  package.xml
codegen/lib/Predict/: buildInfo.mat  cnn_decnet0_0_classoutputlabels.txt  codeInfo.mat  codedescriptor.dmr  codertarget_assembly_flags.mk  gpu_codegen_info.mat  rtw_proj.tmw  rtwtypes.h
codegen/lib/Predict/examples/: main.cu  main.h
codegen/lib/Predict/html/: report.mldatx
codegen/lib/Predict/interface/: _coder_Predict_api.cpp  _coder_Predict_api.h  _coder_Predict_info.cpp  _coder_Predict_info.h  _coder_Predict_mex.cpp  _coder_Predict_mex.h
node/: draw.py  fb_node.cpp
src/: BEV_image.cpp  BEV_image.cpp.dep  BEV_image.h  BEV_image_data.cpp  BEV_image_data.cpp.dep  BEV_image_data.h  BEV_image_initialize.cpp  BEV_image_initialize.cpp.dep  BEV_image_initialize.h  BEV_image_rtw.mk  BEV_image_rtwutil.cpp  BEV_image_rtwutil.cpp.dep  BEV_image_rtwutil.h  BEV_image_terminate.cpp  BEV_image_terminate.cpp.dep  BEV_image_terminate.h  BEV_image_types.h  CTRV_MODEL.cpp  CTRV_MODEL.cpp.dep  CTRV_MODEL.h  CV_MODEL.cpp  CV_MODEL.cpp.dep  CV_MODEL.h  Decision_Predict.cu  Decision_Predict.d  Decision_Predict.h  Decision_Predict_data.cu  Decision_Predict_data.d  Decision_Predict_data.h  Decision_Predict_initialize.cu  Decision_Predict_initialize.d  Decision_Predict_initialize.h  Decision_Predict_internal_types.h  Decision_Predict_rtw.mk  Decision_Predict_terminate.cu  Decision_Predict_terminate.d  Decision_Predict_terminate.h  Decision_Predict_types.h  DeepLearningNetwork.cu  DeepLearningNetwork.d  (+113 more)
src/CollisionMode/: CMakeLists.txt  package.xml
src/CollisionMode/node/: .fb_node.cpp.swp  draw.py  fb_node.cpp
src/CollisionMode/src/: Subsystem.cpp  Subsystem.h  Subsystem_private.h  Subsystem_types.h  rtwtypes.h
src/CollisionMode_Predict/: CMakeLists.txt  package.xml
src/CollisionMode_Predict/launch/: collision_mode_launch.xml
src/CollisionMode_Predict/node/: .predict_node.cpp.swp  predict_node.cpp
src/CollisionMode_Predict/src/: Classification.cpp  Classification.h  Classification_private.h  Classification_types.h  DeepLearningNetwork.cu  DeepLearningNetwork.h  MWCNNLayer.cpp  MWCudnnCNNLayerImpl.cu  MWCudnnCNNLayerImpl.hpp  MWCudnnElementwiseAffineLayerImpl.cu  MWCudnnElementwiseAffineLayerImpl.hpp  MWCudnnFCLayerImpl.cu  MWCudnnFusedConvActivationLayerImpl.hpp  MWCudnnLayerImplFactory.hpp  MWCudnnMaxPoolingLayerImpl.hpp  MWCudnnTargetNetworkImpl.hpp  MWElementwiseAffineLayer.cpp  MWElementwiseAffineLayer.hpp  MWKernelHeaders.hpp  MWSoftmaxLayer.hpp  Predict.cu  Predict.h  Predict_data.cu  Predict_data.h  Predict_initialize.cu  Predict_initialize.h  Predict_internal_types.h  Predict_rtw.mk  Predict_terminate.cu  Predict_terminate.h  Predict_types.h  predict1.cu  predict1.h
src/messages_Total/collision_mode_msg/: CMakeLists.txt  package.xml
src/messages_Total/collision_mode_msg/msg/: collision_mode.msg
src/messages_Total/sensor_fusion_msg/: CMakeLists.txt  package.xml
src/messages_Total/sensor_fusion_msg/msg/: FusionRadarTrack_moat.msg  FusionRadarTrack_moatArray.msg  FusionTrack.msg  FusionTrackArray.msg  FusionTrackArray_v2.msg  FusionTrack_v2.msg
src/messages_Total/sf_in_vehicle_msg/: CMakeLists.txt  package.xml
src/messages_Total/sf_in_vehicle_msg/msg/: In_Vehicle.msg  in_vehicle_sensor_pp.msg
src/messages_Total/sf_mobileye_lane_msg/: CMakeLists.txt  package.xml
src/messages_Total/sf_mobileye_lane_msg/msg/: FrontVisionLaneArray_PP.msg  FrontVisionLane_PP.msg  FrontVisionTrack_moat.msg  FrontVisionTrack_moatArray.msg  mobileye_lane.msg
