<?xml version="1.0"?>
<package format="2">
  <name>sensor_fusion_msg</name>
  <version>0.0.0</version>
  <description>The sensor_fusion_msg package</description>


  <maintainer email="pjh@todo.todo">pjh</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>


</package>
